--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
             <div class="row">
                 <div class="col-lg-5 mb-5 mb-lg-0" style="min-height: 500px;">
                     <div class="position-relative h-100">
-                        <img class="position-absolute w-100 h-100" src="img/about.jpg" style="object-fit: cover;">
+                        <img class="position-absolute w-100 h-100" src="img/icon1.jpg" style="object-fit: cover;">
                     </div>
                 </div>
                 <div class="col-lg-7">
                     <div class="section-title position-relative mb-4">
                         <h6 class="d-inline-block position-relative text-secondary text-uppercase pb-2">Unsere Philosophie</h6>
-                        <h1 class="display-4">Lernmaterialien wie Lernzettel und Literatur nach deinen Bedürfnissen</h1>
+                        <h1 class="display-4">Lernmaterialien und Literatur nach deinen Bedürfnissen</h1>
                     </div>
                     <p>Auf unserer Seite findest du eine große Auswahl an Lernmaterialien und Literatur, speziell für Studierende. Egal ob Skripte, Vorlesungsfolien oder wissenschaftliche Artikel – wir bieten dir alles, was du brauchst, um erfolgreich zu studieren. Unser Ziel ist es, dir den Zugang zu hochwertigen Ressourcen zu erleichtern, damit du dein Studium optimal gestalten kannst. Lade dir das passende Material herunter und starte direkt durch!</p>
                     <div class="row pt-3 mx-0">
