--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
                             <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                         </div>
                     </div>
-                    <a href="contact.html" class="nav-item nav-link">Contact</a>
+                    <a href="contact.html" class="nav-item nav-link">Kontakt</a>
                 </div>
-                <a href="" class="btn btn-primary py-2 px-4 d-none d-lg-block">Join Us</a>
+                <a href="" class="btn btn-primary py-2 px-4 d-none d-lg-block">Melde dich an</a>
             </div>
         </nav>
     </div>
@@ -137,26 +137,26 @@
                     <div class="row pt-3 mx-0">
                         <div class="col-3 px-0">
                             <div class="bg-success text-center p-4">
-                                <h1 class="text-white" data-toggle="counter-up">123</h1>
-                                <h6 class="text-uppercase text-white">Available<span class="d-block">Subjects</span></h6>
+                                <h1 class="text-white" data-toggle="counter-up">5.000</h1>
+                                <h6 class="text-uppercase text-white">Studiengänge<span class="d-block"></span></h6>
                             </div>
                         </div>
                         <div class="col-3 px-0">
                             <div class="bg-primary text-center p-4">
-                                <h1 class="text-white" data-toggle="counter-up">1234</h1>
-                                <h6 class="text-uppercase text-white">Online<span class="d-block">Courses</span></h6>
+                                <h1 class="text-white" data-toggle="counter-up">1.000+</h1>
+                                <h6 class="text-uppercase text-white">Neue Lernzettel<span class="d-block">jeden Tag</span></h6>
                             </div>
                         </div>
                         <div class="col-3 px-0">
                             <div class="bg-secondary text-center p-4">
-                                <h1 class="text-white" data-toggle="counter-up">123</h1>
-                                <h6 class="text-uppercase text-white">Skilled<span class="d-block">Instructors</span></h6>
+                                <h1 class="text-white" data-toggle="counter-up">über 30.000</h1>
+                                <h6 class="text-uppercase text-white">Interaktive<span class="d-block">Lernmaterialien</span></h6>
                             </div>
                         </div>
                         <div class="col-3 px-0">
                             <div class="bg-warning text-center p-4">
-                                <h1 class="text-white" data-toggle="counter-up">1234</h1>
-                                <h6 class="text-uppercase text-white">Happy<span class="d-block">Students</span></h6>
+                                <h1 class="text-white" data-toggle="counter-up">über 100.000</h1>
+                                <h6 class="text-uppercase text-white">Zufriedende<span class="d-block">Lernende</span></h6>
                             </div>
                         </div>
                     </div>
