--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         <div class="col-3 px-0">
                             <div class="bg-success text-center p-4">
                                 <h1 class="text-white" data-toggle="counter-up">5.000</h1>
-                                <h6 class="text-uppercase text-white">Studiengänge<span class="d-block"></span></h6>
+                                <h6 class="text-uppercase text-white">verschiedene<span class="d-block">Studiengänge</span></h6>
                             </div>
                         </div>
                         <div class="col-3 px-0">
@@ -174,7 +174,7 @@
                 <div class="col-lg-7 my-5 pt-5 pb-lg-5">
                     <div class="section-title position-relative mb-4">
                         <h6 class="d-inline-block position-relative text-secondary text-uppercase pb-2">Why Choose Us?</h6>
-                        <h1 class="display-4">Why You Should Start Learning with Us?</h1>
+                        <h1 class="display-4">Warum du mit Edukate lernen solltest?</h1>
                     </div>
                     <p class="mb-4 pb-2">Aliquyam accusam clita nonumy ipsum sit sea clita ipsum clita, ipsum dolores amet voluptua duo dolores et sit ipsum rebum, sadipscing et erat eirmod diam kasd labore clita est. Diam sanctus gubergren sit rebum clita amet.</p>
                     <div class="d-flex mb-3">
