--- a/index.html
+++ b/index.html
@@ -137,25 +137,25 @@
                     <div class="row pt-3 mx-0">
                         <div class="col-3 px-0">
                             <div class="bg-success text-center p-4">
-                                <h1 class="text-white" data-toggle="counter-up">5.000</h1>
+                                <h1 class="text-white" data-toggle="counter-up">900</h1>
                                 <h6 class="text-uppercase text-white">verschiedene<span class="d-block">Studiengänge</span></h6>
                             </div>
                         </div>
                         <div class="col-3 px-0">
                             <div class="bg-primary text-center p-4">
-                                <h1 class="text-white" data-toggle="counter-up">1.000+</h1>
+                                <h1 class="text-white" data-toggle="counter-up">1.000</h1>
                                 <h6 class="text-uppercase text-white">Neue Lernzettel<span class="d-block">jeden Tag</span></h6>
                             </div>
                         </div>
                         <div class="col-3 px-0">
                             <div class="bg-secondary text-center p-4">
-                                <h1 class="text-white" data-toggle="counter-up">über 30.000</h1>
+                                <h1 class="text-white" data-toggle="counter-up">tausende</h1>
                                 <h6 class="text-uppercase text-white">Interaktive<span class="d-block">Lernmaterialien</span></h6>
                             </div>
                         </div>
                         <div class="col-3 px-0">
                             <div class="bg-warning text-center p-4">
-                                <h1 class="text-white" data-toggle="counter-up">über 100.000</h1>
+                                <h1 class="text-white" data-toggle="counter-up">100.000</h1>
                                 <h6 class="text-uppercase text-white">Zufriedende<span class="d-block">Lernende</span></h6>
                             </div>
                         </div>
