--- a/index.html
+++ b/index.html
@@ -176,14 +176,14 @@
                         <h6 class="d-inline-block position-relative text-secondary text-uppercase pb-2">Why Choose Us?</h6>
                         <h1 class="display-4">Warum du mit Edukate lernen solltest?</h1>
                     </div>
-                    <p class="mb-4 pb-2">Aliquyam accusam clita nonumy ipsum sit sea clita ipsum clita, ipsum dolores amet voluptua duo dolores et sit ipsum rebum, sadipscing et erat eirmod diam kasd labore clita est. Diam sanctus gubergren sit rebum clita amet.</p>
+                    <p class="mb-4 pb-2">Bei Edukate stehen dein Lernerfolg und deine Effizienz im Mittelpunkt! Hier sind einige Gründe, warum du gerade unsere Plattform nutzen solltest:</p>
                     <div class="d-flex mb-3">
                         <div class="btn-icon bg-primary mr-4">
                             <i class="fa fa-2x fa-graduation-cap text-white"></i>
                         </div>
                         <div class="mt-n1">
-                            <h4>Skilled Instructors</h4>
-                            <p>Labore rebum duo est Sit dolore eos sit tempor eos stet, vero vero clita magna kasd no nonumy et eos dolor magna ipsum.</p>
+                            <h4>Vielfältige Lernmaterialien</h4>
+                            <p> Egal ob Zusammenfassungen, Übungsaufgaben oder Lernskripte – bei uns findest du genau die Materialien, die dich optimal auf deine Prüfungen vorbereiten.</p>
                         </div>
                     </div>
                     <div class="d-flex mb-3">
