--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <div class="row">
                 <div class="col-lg-7 my-5 pt-5 pb-lg-5">
                     <div class="section-title position-relative mb-4">
-                        <h6 class="d-inline-block position-relative text-secondary text-uppercase pb-2">Why Choose Us?</h6>
+                        <h6 class="d-inline-block position-relative text-secondary text-uppercase pb-2">Wieso ausgerechnet unsere Website?</h6>
                         <h1 class="display-4">Warum du mit Edukate lernen solltest?</h1>
                     </div>
                     <p class="mb-4 pb-2">Bei Edukate stehen dein Lernerfolg und deine Effizienz im Mittelpunkt! Hier sind einige Gründe, warum du gerade unsere Plattform nutzen solltest:</p>
@@ -191,8 +191,8 @@
                             <i class="fa fa-2x fa-certificate text-white"></i>
                         </div>
                         <div class="mt-n1">
-                            <h4>International Certificate</h4>
-                            <p>Labore rebum duo est Sit dolore eos sit tempor eos stet, vero vero clita magna kasd no nonumy et eos dolor magna ipsum.</p>
+                            <h4>Einfacher Zugang</h4>
+                            <p>Alle Inhalte sind übersichtlich strukturiert und leicht zugänglich. Du sparst Zeit bei der Suche nach den richtigen Ressourcen und kannst dich voll und ganz auf das Lernen konzentrieren.</p>
                         </div>
                     </div>
                     <div class="d-flex">
@@ -200,8 +200,8 @@
                             <i class="fa fa-2x fa-book-reader text-white"></i>
                         </div>
                         <div class="mt-n1">
-                            <h4>Online Classes</h4>
-                            <p class="m-0">Labore rebum duo est Sit dolore eos sit tempor eos stet, vero vero clita magna kasd no nonumy et eos dolor magna ipsum.</p>
+                            <h4>Individuelle Lernunterstützung</h4>
+                            <p class="m-0">Bei Edukate findest du Materialien für verschiedene Lernstile. Ob du lieber mit Grafiken, Texten oder Übungsaufgaben lernst – hier ist für jeden etwas dabei!</p>
                         </div>
                     </div>
                 </div>
