--- a/index.html
+++ b/index.html
@@ -60,63 +60,65 @@
     <!-- Topbar End -->
 
 
-    <!-- Navbar Start -->
-    <div class="container-fluid p-0">
-        <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 px-lg-5">
-            <a href="index.html" class="navbar-brand ml-lg-3">
-                <h1 class="m-0 text-uppercase text-primary"><i class="fa fa-book-reader mr-3"></i>Edukate - Das Lernportal</h1>
-            </a>
-            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-between px-lg-3" id="navbarCollapse">
-                <div class="navbar-nav mx-auto py-0">
-                    <a href="index.html" class="nav-item nav-link active">Home</a>
-                    <a href="about.html" class="nav-item nav-link">Lernmaterialien</a>
-                    <a href="course.html" class="nav-item nav-link">Literaturverzeichnis</a>
-                    <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
-                        <div class="dropdown-menu m-0">
-                            <a href="detail.html" class="dropdown-item">Course Detail</a>
-                            <a href="feature.html" class="dropdown-item">Our Features</a>
-                            <a href="team.html" class="dropdown-item">Instructors</a>
-                            <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                        </div>
+<!-- Navbar Start -->
+<div class="container-fluid p-0">
+    <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 px-lg-5">
+        <a href="index.html" class="navbar-brand ml-lg-3">
+            <h1 class="m-0 text-uppercase text-primary"><i class="fa fa-book-reader mr-3"></i>Edukate - Das Lernportal</h1>
+        </a>
+        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-between px-lg-3" id="navbarCollapse">
+            <div class="navbar-nav mx-auto py-0">
+                <a href="index.html" class="nav-item nav-link active">Home</a>
+                <a href="about.html" class="nav-item nav-link">Lernmaterialien</a>
+                <a href="literatur.html" class="nav-item nav-link">Literaturverzeichnis</a>
+                <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Seiten</a>
+                    <div class="dropdown-menu m-0">
+                        <a href="detail.html" class="dropdown-item">Kursdetails</a>
+                        <a href="feature.html" class="dropdown-item">Unsere Features</a>
+                        <a href="testimonial.html" class="dropdown-item">Erfahrungsberichte</a>
                     </div>
-                    <a href="contact.html" class="nav-item nav-link">Kontakt</a>
                 </div>
-                <a href="" class="btn btn-primary py-2 px-4 d-none d-lg-block">Melde dich an</a>
+                <a href="contact.html" class="nav-item nav-link">Kontakt</a>
             </div>
-        </nav>
-    </div>
-    <!-- Navbar End -->
+            <a href="" class="btn btn-primary py-2 px-4 d-none d-lg-block">Melde dich an</a>
+        </div>
+    </nav>
+</div>
+<!-- Navbar End -->
 
 
-    <!-- Header Start -->
-    <div class="jumbotron jumbotron-fluid position-relative overlay-bottom" style="margin-bottom: 90px;">
-        <div class="container text-center my-5 py-5">
-            <h1 class="text-white mt-4 mb-4">Lernen ohne Stress</h1>
-            <h1 class="text-white display-1 mb-5">Lernmaterialien und Literatur für deine Kurse</h1>
-            <div class="mx-auto mb-5" style="width: 100%; max-width: 600px;">
-                <div class="input-group">
-                    <div class="input-group-prepend">
-                        <button class="btn btn-outline-light bg-white text-body px-4 dropdown-toggle" type="button" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false">Courses</button>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Courses 1</a>
-                            <a class="dropdown-item" href="#">Courses 2</a>
-                            <a class="dropdown-item" href="#">Courses 3</a>
-                        </div>
+<!-- Header Start -->
+<div class="jumbotron jumbotron-fluid position-relative overlay-bottom" style="margin-bottom: 90px;">
+    <div class="container text-center my-5 py-5">
+        <h1 class="text-white mt-4 mb-4">Lernen ohne Stress</h1>
+        <h1 class="text-white display-1 mb-5">Finde Lernmaterialien, Übungsaufgaben und Literatur für deinen Studiengang</h1>
+        <div class="mx-auto mb-5" style="width: 100%; max-width: 600px;">
+            <div class="input-group">
+                <div class="input-group-prepend">
+                    <button class="btn btn-outline-light bg-white text-body px-4 dropdown-toggle" type="button" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">Studiengänge</button>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="#">BWL</a>
+                        <a class="dropdown-item" href="#">Informatik</a>
+                        <a class="dropdown-item" href="#">Maschinenbau</a>
+                        <a class="dropdown-item" href="#">Psychologie</a>
                     </div>
-                    <input type="text" class="form-control border-light" style="padding: 30px 25px;" placeholder="Keyword">
-                    <div class="input-group-append">
-                        <button class="btn btn-secondary px-4 px-lg-5">Search</button>
-                    </div>
+                </div>
+                <input type="text" class="form-control border-light" style="padding: 30px 25px;" placeholder="Studiengang, Kurs oder Schlagwort">
+                <div class="input-group-append">
+                    <button class="btn btn-secondary px-4 px-lg-5">Suchen</button>
                 </div>
             </div>
         </div>
+        <a href="lernmaterialien.html" class="btn btn-outline-light bg-white text-body px-4">Zu allen Studiengängen und Kursen</a>
     </div>
-    <!-- Header End -->
+</div>
+<!-- Header End -->
+
 
 
     <!-- About Start -->
@@ -239,7 +241,7 @@
                     </div>
                 </div>
                 <div class="w-100 bg-white text-center p-4">
-                    <a class="btn btn-primary" href="detail.html">Kursdetails</a>
+                    <a class="btn btn-primary" href="detail.html">Zu den Lernmaterialien</a>
                 </div>
             </div>
         </div>
@@ -290,7 +292,7 @@
                     </div>
                 </div>
                 <div class="w-100 bg-white text-center p-4">
-                    <a class="btn btn-primary" href="detail.html">Kursdetails</a>
+                    <a class="btn btn-primary" href="detail.html">Zu den Tutorials</a>
                 </div>
             </div>
         </div>
