--- a/index.html
+++ b/index.html
@@ -121,52 +121,61 @@
 
 
 
-    <!-- About Start -->
-    <div class="container-fluid py-5">
-        <div class="container py-5">
-            <div class="row">
-                <div class="col-lg-5 mb-5 mb-lg-0" style="min-height: 500px;">
-                    <div class="position-relative h-100">
-                        <img class="position-absolute w-100 h-100" src="img/icon1.jpg" style="object-fit: cover;">
-                    </div>
+<!-- About Start -->
+<div class="container-fluid py-5">
+    <div class="container py-5">
+        <div class="row">
+            <div class="col-lg-5 mb-5 mb-lg-0" style="min-height: 500px;">
+                <div class="position-relative h-100">
+                    <img class="position-absolute w-100 h-100" src="img/icon1.jpg" style="object-fit: cover;">
                 </div>
-                <div class="col-lg-7">
-                    <div class="section-title position-relative mb-4">
-                        <h6 class="d-inline-block position-relative text-secondary text-uppercase pb-2">Unsere Philosophie</h6>
-                        <h1 class="display-4">Lernmaterialien und Literatur nach deinen Bedürfnissen</h1>
+            </div>
+            <div class="col-lg-7">
+                <div class="section-title position-relative mb-4">
+                    <h6 class="d-inline-block position-relative text-secondary text-uppercase pb-2">Unsere Philosophie</h6>
+                    <h1 class="display-4">Lernmaterialien und Literatur nach deinen Bedürfnissen</h1>
+                </div>
+                <p>Auf unserer Seite findest du eine große Auswahl an Lernmaterialien und Literatur, speziell für Studierende. Egal ob Skripte, Vorlesungsfolien oder wissenschaftliche Artikel – wir bieten dir alles, was du brauchst, um erfolgreich zu studieren. Unser Ziel ist es, dir den Zugang zu hochwertigen Ressourcen zu erleichtern, damit du dein Studium optimal gestalten kannst. Lade dir das passende Material herunter und starte direkt durch!</p>
+
+                <!-- Statistische Kästchen -->
+                <div class="row pt-3 mx-0">
+                    <!-- Studiengänge -->
+                    <div class="col-6 col-md-3 px-1">
+                        <div class="bg-success text-center p-4 rounded">
+                            <h2 class="text-white" data-toggle="counter-up">900</h2>
+                            <h6 class="text-uppercase text-white mt-2">verschiedene<span class="d-block">Studiengänge</span></h6>
+                        </div>
                     </div>
-                    <p>Auf unserer Seite findest du eine große Auswahl an Lernmaterialien und Literatur, speziell für Studierende. Egal ob Skripte, Vorlesungsfolien oder wissenschaftliche Artikel – wir bieten dir alles, was du brauchst, um erfolgreich zu studieren. Unser Ziel ist es, dir den Zugang zu hochwertigen Ressourcen zu erleichtern, damit du dein Studium optimal gestalten kannst. Lade dir das passende Material herunter und starte direkt durch!</p>
-                    <div class="row pt-3 mx-0">
-                        <div class="col-3 px-0">
-                            <div class="bg-success text-center p-4">
-                                <h1 class="text-white" data-toggle="counter-up">900</h1>
-                                <h6 class="text-uppercase text-white">verschiedene<span class="d-block">Studiengänge</span></h6>
-                            </div>
+
+                    <!-- Neue Lernzettel -->
+                    <div class="col-6 col-md-3 px-1">
+                        <div class="bg-primary text-center p-4 rounded">
+                            <h2 class="text-white" data-toggle="counter-up">1.000</h2>
+                            <h6 class="text-uppercase text-white mt-2">Neue Lernzettel<span class="d-block">jeden Tag</span></h6>
                         </div>
-                        <div class="col-3 px-0">
-                            <div class="bg-primary text-center p-4">
-                                <h1 class="text-white" data-toggle="counter-up">1.000</h1>
-                                <h6 class="text-uppercase text-white">Neue Lernzettel<span class="d-block">jeden Tag</span></h6>
-                            </div>
+                    </div>
+
+                    <!-- Interaktive Lernmaterialien -->
+                    <div class="col-6 col-md-3 px-1 mt-3 mt-md-0">
+                        <div class="bg-secondary text-center p-4 rounded">
+                            <h2 class="text-white" data-toggle="counter-up">50.000</h2>
+                            <h6 class="text-uppercase text-white mt-2">Interaktive<span class="d-block">Lernmaterialien</span></h6>
                         </div>
-                        <div class="col-3 px-0">
-                            <div class="bg-secondary text-center p-4">
-                                <h1 class="text-white" data-toggle="counter-up">tausende</h1>
-                                <h6 class="text-uppercase text-white">Interaktive<span class="d-block">Lernmaterialien</span></h6>
-                            </div>
-                        </div>
-                        <div class="col-3 px-0">
-                            <div class="bg-warning text-center p-4">
-                                <h1 class="text-white" data-toggle="counter-up">100.000</h1>
-                                <h6 class="text-uppercase text-white">Zufriedende<span class="d-block">Lernende</span></h6>
-                            </div>
+                    </div>
+
+                    <!-- Zufriedene Lernende -->
+                    <div class="col-6 col-md-3 px-1 mt-3 mt-md-0">
+                        <div class="bg-warning text-center p-4 rounded">
+                            <h2 class="text-white" data-toggle="counter-up">150.000</h2>
+                            <h6 class="text-uppercase text-white mt-2">Zufriedene<span class="d-block">Lernende</span></h6>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- About End -->
+</div>
+<!-- About End -->
 
 
     <!-- Feature Start -->
