--- a/index.html
+++ b/index.html
@@ -132,42 +132,42 @@
             </div>
             <div class="col-lg-7">
                 <div class="section-title position-relative mb-4">
-                    <h6 class="d-inline-block position-relative text-secondary text-uppercase pb-2">Unsere Philosophie</h6>
+                    <h6 class="d-inline-block position-relative text-primary text-uppercase pb-2">Unsere Philosophie</h6>
                     <h1 class="display-4">Lernmaterialien und Literatur nach deinen Bedürfnissen</h1>
                 </div>
-                <p>Auf unserer Seite findest du eine große Auswahl an Lernmaterialien und Literatur, speziell für Studierende. Egal ob Skripte, Vorlesungsfolien oder wissenschaftliche Artikel – wir bieten dir alles, was du brauchst, um erfolgreich zu studieren. Unser Ziel ist es, dir den Zugang zu hochwertigen Ressourcen zu erleichtern, damit du dein Studium optimal gestalten kannst.</p>
+                <p>Auf unserer Seite findest du eine große Auswahl an Lernmaterialien und Literatur, speziell für Studierende. Egal ob Skripte, Vorlesungsfolien oder wissenschaftliche Artikel – wir bieten dir alles, was du brauchst, um erfolgreich zu studieren. Unser Ziel ist es, dir den Zugang zu hochwertigen Ressourcen zu erleichtern, damit du dein Studium optimal gestalten kannst. Lade dir das passende Material herunter und starte direkt durch!</p>
 
                 <!-- Statistische Kästchen -->
                 <div class="row pt-4 mx-0">
                     <!-- Studiengänge -->
                     <div class="col-6 col-md-3 px-2 mb-3">
-                        <div class="bg-dark text-center text-white shadow-sm p-5 rounded-pill">
-                            <h2 class="mb-0" data-toggle="counter-up">900</h2>
-                            <h6 class="text-uppercase mt-2">Studiengänge</h6>
+                        <div class="bg-light text-center shadow-sm p-4 rounded">
+                            <h2 class="text-dark mb-3" data-toggle="counter-up">900</h2>
+                            <h6 class="text-uppercase text-dark">Studiengänge</h6>
                         </div>
                     </div>
 
                     <!-- Neue Lernzettel -->
                     <div class="col-6 col-md-3 px-2 mb-3">
-                        <div class="bg-success text-center text-white shadow-sm p-5 rounded-pill">
-                            <h2 class="mb-0" data-toggle="counter-up">1.000</h2>
-                            <h6 class="text-uppercase mt-2">Neue Lernzettel</h6>
+                        <div class="bg-light text-center shadow-sm p-4 rounded">
+                            <h2 class="text-dark mb-3" data-toggle="counter-up">1.000</h2>
+                            <h6 class="text-uppercase text-dark">Neue Lernzettel pro Tag</h6>
                         </div>
                     </div>
 
                     <!-- Interaktive Lernmaterialien -->
                     <div class="col-6 col-md-3 px-2 mb-3">
-                        <div class="bg-info text-center text-white shadow-sm p-5 rounded-pill">
-                            <h2 class="mb-0" data-toggle="counter-up">50.000</h2>
-                            <h6 class="text-uppercase mt-2">Interaktive Materialien</h6>
+                        <div class="bg-light text-center shadow-sm p-4 rounded">
+                            <h2 class="text-dark mb-3" data-toggle="counter-up">50.000</h2>
+                            <h6 class="text-uppercase text-dark">Interaktive Materialien</h6>
                         </div>
                     </div>
 
                     <!-- Zufriedene Lernende -->
                     <div class="col-6 col-md-3 px-2 mb-3">
-                        <div class="bg-warning text-center text-white shadow-sm p-5 rounded-pill">
-                            <h2 class="mb-0" data-toggle="counter-up">150.000</h2>
-                            <h6 class="text-uppercase mt-2">Zufriedene Lernende</h6>
+                        <div class="bg-light text-center shadow-sm p-4 rounded">
+                            <h2 class="text-dark mb-3" data-toggle="counter-up">150.000</h2>
+                            <h6 class="text-uppercase text-dark">Zufriedene Lernende</h6>
                         </div>
                     </div>
                 </div>
@@ -176,7 +176,6 @@
     </div>
 </div>
 <!-- About End -->
-
 
 
 
