--- a/index.html
+++ b/index.html
@@ -372,74 +372,59 @@
 
 
 
-    <!-- Team Start -->
-    <div class="container-fluid py-5">
-        <div class="container py-5">
-            <div class="section-title text-center position-relative mb-5">
-                <h6 class="d-inline-block position-relative text-secondary text-uppercase pb-2">Instructors</h6>
-                <h1 class="display-4">Meet Our Instructors</h1>
+<!-- Universities Start -->
+<div class="container-fluid py-5">
+    <div class="container py-5">
+        <div class="section-title text-center position-relative mb-5">
+            <h6 class="d-inline-block position-relative text-secondary text-uppercase pb-2">Partneruniversitäten</h6>
+            <h1 class="display-4">Diese Universitäten haben an Edukate mitgearbeitet</h1>
+        </div>
+        <div class="owl-carousel team-carousel position-relative" style="padding: 0 30px;">
+            <div class="team-item">
+                <img class="img-fluid w-100" src="img/university-1.png" alt="Universität Hildesheim">
+                <div class="bg-light text-center p-4 rounded">
+                    <h5 class="mb-3">Universität Hildesheim</h5>
+                    <p class="mb-2">Kooperationspartner für digitale Lernmaterialien.</p>
+                    <p class="text-muted">Prof. Dr. Anna Schmidt, Fachbereich Medien</p>
+                </div>
             </div>
-            <div class="owl-carousel team-carousel position-relative" style="padding: 0 30px;">
-                <div class="team-item">
-                    <img class="img-fluid w-100" src="img/team-1.jpg" alt="">
-                    <div class="bg-light text-center p-4">
-                        <h5 class="mb-3">Instructor Name</h5>
-                        <p class="mb-2">Web Design & Development</p>
-                        <div class="d-flex justify-content-center">
-                            <a class="mx-1 p-1" href="#"><i class="fab fa-twitter"></i></a>
-                            <a class="mx-1 p-1" href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a class="mx-1 p-1" href="#"><i class="fab fa-linkedin-in"></i></a>
-                            <a class="mx-1 p-1" href="#"><i class="fab fa-instagram"></i></a>
-                            <a class="mx-1 p-1" href="#"><i class="fab fa-youtube"></i></a>
-                        </div>
-                    </div>
+            <div class="team-item">
+                <img class="img-fluid w-100" src="img/university-2.png" alt="Leibniz Universität Hannover">
+                <div class="bg-light text-center p-4 rounded">
+                    <h5 class="mb-3">Leibniz Universität Hannover</h5>
+                    <p class="mb-2">Forschung und Entwicklung in der Bildungsinnovation.</p>
+                    <p class="text-muted">Dr. Markus Müller, Institut für Erziehungswissenschaft</p>
                 </div>
-                <div class="team-item">
-                    <img class="img-fluid w-100" src="img/team-2.jpg" alt="">
-                    <div class="bg-light text-center p-4">
-                        <h5 class="mb-3">Instructor Name</h5>
-                        <p class="mb-2">Web Design & Development</p>
-                        <div class="d-flex justify-content-center">
-                            <a class="mx-1 p-1" href="#"><i class="fab fa-twitter"></i></a>
-                            <a class="mx-1 p-1" href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a class="mx-1 p-1" href="#"><i class="fab fa-linkedin-in"></i></a>
-                            <a class="mx-1 p-1" href="#"><i class="fab fa-instagram"></i></a>
-                            <a class="mx-1 p-1" href="#"><i class="fab fa-youtube"></i></a>
-                        </div>
-                    </div>
+            </div>
+            <div class="team-item">
+                <img class="img-fluid w-100" src="img/university-3.png" alt="Ruhr-Universität Bochum">
+                <div class="bg-light text-center p-4 rounded">
+                    <h5 class="mb-3">Ruhr-Universität Bochum</h5>
+                    <p class="mb-2">Expertise in interaktiven Lernmethoden.</p>
+                    <p class="text-muted">Dr. Lisa Weber, Fakultät für Wirtschaftswissenschaft</p>
                 </div>
-                <div class="team-item">
-                    <img class="img-fluid w-100" src="img/team-3.jpg" alt="">
-                    <div class="bg-light text-center p-4">
-                        <h5 class="mb-3">Instructor Name</h5>
-                        <p class="mb-2">Web Design & Development</p>
-                        <div class="d-flex justify-content-center">
-                            <a class="mx-1 p-1" href="#"><i class="fab fa-twitter"></i></a>
-                            <a class="mx-1 p-1" href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a class="mx-1 p-1" href="#"><i class="fab fa-linkedin-in"></i></a>
-                            <a class="mx-1 p-1" href="#"><i class="fab fa-instagram"></i></a>
-                            <a class="mx-1 p-1" href="#"><i class="fab fa-youtube"></i></a>
-                        </div>
-                    </div>
+            </div>
+            <div class="team-item">
+                <img class="img-fluid w-100" src="img/university-4.png" alt="Technische Universität Dortmund">
+                <div class="bg-light text-center p-4 rounded">
+                    <h5 class="mb-3">Technische Universität Dortmund</h5>
+                    <p class="mb-2">Technische Unterstützung und Innovation.</p>
+                    <p class="text-muted">Prof. Dr. Peter Lange, Fakultät für Informatik</p>
                 </div>
-                <div class="team-item">
-                    <img class="img-fluid w-100" src="img/team-4.jpg" alt="">
-                    <div class="bg-light text-center p-4">
-                        <h5 class="mb-3">Instructor Name</h5>
-                        <p class="mb-2">Web Design & Development</p>
-                        <div class="d-flex justify-content-center">
-                            <a class="mx-1 p-1" href="#"><i class="fab fa-twitter"></i></a>
-                            <a class="mx-1 p-1" href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a class="mx-1 p-1" href="#"><i class="fab fa-linkedin-in"></i></a>
-                            <a class="mx-1 p-1" href="#"><i class="fab fa-instagram"></i></a>
-                            <a class="mx-1 p-1" href="#"><i class="fab fa-youtube"></i></a>
-                        </div>
-                    </div>
+            </div>
+            <div class="team-item">
+                <img class="img-fluid w-100" src="img/university-5.png" alt="Universität Mannheim">
+                <div class="bg-light text-center p-4 rounded">
+                    <h5 class="mb-3">Universität Mannheim</h5>
+                    <p class="mb-2">Kooperation in der Lehrforschung.</p>
+                    <p class="text-muted">Dr. Julia Fischer, Lehrstuhl für Betriebswirtschaftslehre</p>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Team End -->
+</div>
+<!-- Universities End -->
+
 
 
     <!-- Testimonial Start -->
