--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
         </div>
         <div class="owl-carousel team-carousel position-relative" style="padding: 0 30px;">
             <div class="team-item">
-                <img class="img-fluid w-100" src="img/university-1.png" alt="Universität Hildesheim">
+                <img class="img-fluid w-100" src="img/university-1.jpg" alt="Universität Hildesheim">
                 <div class="bg-light text-center p-4 rounded">
                     <h5 class="mb-3">Universität Hildesheim</h5>
                     <p class="mb-2">Kooperationspartner für digitale Lernmaterialien.</p>
