--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                 </div>
             </div>
             <div class="team-item">
-                <img class="img-fluid w-100" src="img/university-2.png" alt="Leibniz Universität Hannover">
+                <img class="img-fluid w-100" src="img/university-2.jpg" alt="Leibniz Universität Hannover">
                 <div class="bg-light text-center p-4 rounded">
                     <h5 class="mb-3">Leibniz Universität Hannover</h5>
                     <p class="mb-2">Forschung und Entwicklung in der Bildungsinnovation.</p>
@@ -397,7 +397,7 @@
                 </div>
             </div>
             <div class="team-item">
-                <img class="img-fluid w-100" src="img/university-3.png" alt="Ruhr-Universität Bochum">
+                <img class="img-fluid w-100" src="img/university-3.jpg" alt="Ruhr-Universität Bochum">
                 <div class="bg-light text-center p-4 rounded">
                     <h5 class="mb-3">Ruhr-Universität Bochum</h5>
                     <p class="mb-2">Expertise in interaktiven Lernmethoden.</p>
@@ -405,7 +405,7 @@
                 </div>
             </div>
             <div class="team-item">
-                <img class="img-fluid w-100" src="img/university-4.png" alt="Technische Universität Dortmund">
+                <img class="img-fluid w-100" src="img/university-4.jpg" alt="Technische Universität Dortmund">
                 <div class="bg-light text-center p-4 rounded">
                     <h5 class="mb-3">Technische Universität Dortmund</h5>
                     <p class="mb-2">Technische Unterstützung und Innovation.</p>
@@ -413,7 +413,7 @@
                 </div>
             </div>
             <div class="team-item">
-                <img class="img-fluid w-100" src="img/university-5.png" alt="Universität Mannheim">
+                <img class="img-fluid w-100" src="img/university-5.jpg" alt="Universität Mannheim">
                 <div class="bg-light text-center p-4 rounded">
                     <h5 class="mb-3">Universität Mannheim</h5>
                     <p class="mb-2">Kooperation in der Lehrforschung.</p>
