--- a/index.html
+++ b/index.html
@@ -427,39 +427,49 @@
 
 
 
-    <!-- Testimonial Start -->
-    <div class="container-fluid bg-image py-5" style="margin: 90px 0;">
-        <div class="container py-5">
-            <div class="row align-items-center">
-                <div class="col-lg-5 mb-5 mb-lg-0">
-                    <div class="section-title position-relative mb-4">
-                        <h6 class="d-inline-block position-relative text-secondary text-uppercase pb-2">Testimonial</h6>
-                        <h1 class="display-4">What Say Our Students</h1>
-                    </div>
-                    <p class="m-0">Dolor est dolores et nonumy sit labore dolores est sed rebum amet, justo duo ipsum sanctus dolore magna rebum sit et. Diam lorem ea sea at. Nonumy et at at sed justo est nonumy tempor. Vero sea ea eirmod, elitr ea amet diam ipsum at amet. Erat sed stet eos ipsum diam</p>
+   <!-- Testimonial Start -->
+<div class="container-fluid py-5" style="margin: 90px 0; background: #f8f9fa;">
+    <div class="container py-5">
+        <div class="row align-items-center">
+            <div class="col-lg-5 mb-5 mb-lg-0">
+                <div class="section-title text-center mb-4">
+                    <h6 class="d-inline-block text-secondary text-uppercase pb-2">Was unsere Lernenden sagen</h6>
+                    <h1 class="display-4">Feedback unserer Studierenden</h1>
                 </div>
-                <div class="col-lg-7">
-                    <div class="owl-carousel testimonial-carousel">
-                        <div class="bg-white p-5">
-                            <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                            <p>Sed et elitr ipsum labore dolor diam, ipsum duo vero sed sit est est ipsum eos clita est ipsum. Est nonumy tempor at kasd. Sed at dolor duo ut dolor, et justo erat dolor magna sed stet amet elitr duo lorem</p>
-                            <div class="d-flex flex-shrink-0 align-items-center mt-4">
-                                <img class="img-fluid mr-4" src="img/testimonial-2.jpg" alt="">
-                                <div>
-                                    <h5>Student Name</h5>
-                                    <span>Web Design</span>
-                                </div>
+                <p class="text-muted">Unsere Lernenden profitieren von einer Vielzahl an hochwertigen Materialien und einer benutzerfreundlichen Plattform, die das Lernen erleichtert. Hier sind einige Rückmeldungen, die uns stolz machen!</p>
+            </div>
+            <div class="col-lg-7">
+                <div class="owl-carousel testimonial-carousel">
+                    <div class="bg-white p-4 rounded shadow">
+                        <i class="fa fa-3x fa-quote-left text-primary mb-3"></i>
+                        <p class="text-muted">„Dank Edukate habe ich alle benötigten Materialien an einem Ort. Die Qualität der Lernunterlagen ist hervorragend und hat mir geholfen, meine Prüfungen zu bestehen.“</p>
+                        <div class="d-flex align-items-center mt-4">
+                            <img class="img-fluid rounded-circle mr-3" src="img/testimonial-2.jpg" alt="" style="width: 60px; height: 60px;">
+                            <div>
+                                <h5 class="font-weight-bold">Maximilian Müller</h5>
+                                <span class="text-muted">Betriebswirtschaftslehre</span>
                             </div>
                         </div>
-                        <div class="bg-white p-5">
-                            <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                            <p>Sed et elitr ipsum labore dolor diam, ipsum duo vero sed sit est est ipsum eos clita est ipsum. Est nonumy tempor at kasd. Sed at dolor duo ut dolor, et justo erat dolor magna sed stet amet elitr duo lorem</p>
-                            <div class="d-flex flex-shrink-0 align-items-center mt-4">
-                                <img class="img-fluid mr-4" src="img/testimonial-1.jpg" alt="">
-                                <div>
-                                    <h5>Student Name</h5>
-                                    <span>Web Design</span>
-                                </div>
+                    </div>
+                    <div class="bg-white p-4 rounded shadow">
+                        <i class="fa fa-3x fa-quote-left text-primary mb-3"></i>
+                        <p class="text-muted">„Die interaktiven Lernmaterialien haben mein Verständnis für komplexe Themen enorm verbessert. Ich empfehle Edukate jedem Studierenden!“</p>
+                        <div class="d-flex align-items-center mt-4">
+                            <img class="img-fluid rounded-circle mr-3" src="img/testimonial-1.jpg" alt="" style="width: 60px; height: 60px;">
+                            <div>
+                                <h5 class="font-weight-bold">Anna Schmidt</h5>
+                                <span class="text-muted">Informatik</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="bg-white p-4 rounded shadow">
+                        <i class="fa fa-3x fa-quote-left text-primary mb-3"></i>
+                        <p class="text-muted">„Die Plattform ist einfach zu bedienen und bietet eine Fülle von Ressourcen. Es ist der beste Ort für Studierende, die Erfolg haben wollen.“</p>
+                        <div class="d-flex align-items-center mt-4">
+                            <img class="img-fluid rounded-circle mr-3" src="img/testimonial-3.jpg" alt="" style="width: 60px; height: 60px;">
+                            <div>
+                                <h5 class="font-weight-bold">Laura Becker</h5>
+                                <span class="text-muted">Medienwissenschaften</span>
                             </div>
                         </div>
                     </div>
@@ -467,7 +477,9 @@
             </div>
         </div>
     </div>
-    <!-- Testimonial Start -->
+</div>
+<!-- Testimonial End -->
+
 
 
     <!-- Contact Start -->
