--- a/index.html
+++ b/index.html
@@ -563,13 +563,13 @@
             <!-- Über uns -->
             <div class="col-md-6 mb-5">
                 <a href="index.html" class="navbar-brand">
-                    <h1 class="text-uppercase text-white"><i class="fa fa-graduation-cap mr-3"></i>LernHub</h1>
+                    <h1 class="text-uppercase text-white"><i class="fa fa-graduation-cap mr-3"></i>Edukate</h1>
                 </a>
                 <p>Wir sind eine Plattform, die es sich zur Aufgabe gemacht hat, Bildung und Wissen durch moderne Technologien für alle zugänglich zu machen. Unsere Kooperationen mit führenden Universitäten stellen sicher, dass unsere Inhalte auf höchstem Niveau sind.</p>
             </div>
             <!-- Newsletter -->
             <div class="col-md-6 mb-5">
-                <h3 class="text-white mb-4">Bleibe auf dem Laufenden</h3>
+                <h3 class="text-white mb-4">Bleiben Sie auf dem Laufenden</h3>
                 <div class="w-100">
                     <div class="input-group">
                         <input type="email" class="form-control border-0" style="padding: 25px;" placeholder="Ihre E-Mail-Adresse" required>
@@ -586,7 +586,7 @@
                 <h3 class="text-white mb-4">Kontakt</h3>
                 <p><i class="fa fa-map-marker-alt mr-2"></i>Universität Hildesheim, Deutschland</p>
                 <p><i class="fa fa-phone-alt mr-2"></i>+49 123 456 789</p>
-                <p><i class="fa fa-envelope mr-2"></i>info@lernhub.de</p>
+                <p><i class="fa fa-envelope mr-2"></i>info@edukate.de</p>
                 <div class="d-flex justify-content-start mt-4">
                     <a class="text-white mr-3" href="#"><i class="fab fa-2x fa-twitter"></i></a>
                     <a class="text-white mr-3" href="#"><i class="fab fa-2x fa-facebook-f"></i></a>
@@ -612,7 +612,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 text-center text-md-left mb-3 mb-md-0">
-                <p class="m-0">Copyright &copy; <a class="text-white" href="#">LernHub</a>. Alle Rechte vorbehalten.</p>
+                <p class="m-0">Copyright &copy; <a class="text-white" href="#">Edukate</a>. Alle Rechte vorbehalten.</p>
             </div>
             <div class="col-md-6 text-center text-md-right">
                 <p class="m-0">Design von <a class="text-white" href="#">EduCode</a></p>
@@ -621,6 +621,7 @@
     </div>
 </div>
 <!-- Footer End -->
+
 
 
 
