--- a/index.html
+++ b/index.html
@@ -531,10 +531,10 @@
                     <form>
                         <div class="row">
                             <div class="col-6 form-group">
-                                <input type="text" class="form-control border-0 p-3" placeholder="Ihr Name" required="required">
+                                <input type="text" class="form-control border-0 p-3" placeholder="Dein Name" required="required">
                             </div>
                             <div class="col-6 form-group">
-                                <input type="email" class="form-control border-0 p-3" placeholder="Ihre E-Mail" required="required">
+                                <input type="email" class="form-control border-0 p-3" placeholder="Deine E-Mail" required="required">
                             </div>
                         </div>
                         <div class="form-group">
@@ -569,10 +569,10 @@
             </div>
             <!-- Newsletter -->
             <div class="col-md-6 mb-5">
-                <h3 class="text-white mb-4">Bleiben Sie auf dem Laufenden</h3>
+                <h3 class="text-white mb-4">Bleibe auf dem Laufenden</h3>
                 <div class="w-100">
                     <div class="input-group">
-                        <input type="email" class="form-control border-0" style="padding: 25px;" placeholder="Ihre E-Mail-Adresse" required>
+                        <input type="email" class="form-control border-0" style="padding: 25px;" placeholder="Deine E-Mail-Adresse" required>
                         <div class="input-group-append">
                             <button class="btn btn-dark px-4">Anmelden</button>
                         </div>
