--- a/index.html
+++ b/index.html
@@ -114,10 +114,11 @@
                 </div>
             </div>
         </div>
-        <a href="lernmaterialien.html" class="btn btn-outline-light bg-white text-body px-4">Zu allen Studiengängen und Kursen</a>
+        <a href="https://www.einstieg.com/studium/studiengaenge-a-z.html" target="_blank" class="btn btn-outline-light bg-white text-body px-4">Zu allen Studiengängen und Kursen</a>
     </div>
 </div>
 <!-- Header End -->
+
 
 
 
